--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap"
     rel="stylesheet">
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
   <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
   <link rel="stylesheet" href="css/animate.css">
 
@@ -33,6 +36,7 @@
   <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/icomoon.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://kit.fontawesome.com/a46f18e48c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -50,10 +54,10 @@
           <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-          <li class="nav-item"><a href="vehicles.html" class="nav-link">Vehicles</a></li>
+          <li class="nav-item"><a href="vehicles.html" class="nav-link">Gallery</a></li>
           <!-- <li class="nav-item"><a href="car.html" class="nav-link">Cars</a></li> -->
           <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="contact.html" class="nav-link">Book Service</a></li>
         </ul>
       </div>
     </div>
@@ -205,7 +209,8 @@
 
 
 
-                  <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#"
+                  <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">Book now</a> <a href="#"
                       class="btn btn-secondary py-2 ml-1">Details</a></p>
                 </div>
               </div>
@@ -247,7 +252,8 @@
 
 
 
-                  <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#"
+                  <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">Book now</a> <a href="#"
                       class="btn btn-secondary py-2 ml-1">Details</a></p>
                 </div>
               </div>
@@ -289,7 +295,8 @@
 
 
 
-                  <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#"
+                  <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">Book now</a> <a href="#"
                       class="btn btn-secondary py-2 ml-1">Details</a></p>
                 </div>
               </div>
@@ -331,7 +338,8 @@
 
 
 
-                  <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#"
+                  <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">Book now</a> <a href="#"
                       class="btn btn-secondary py-2 ml-1">Details</a></p>
                 </div>
               </div>
@@ -353,8 +361,21 @@
             <span class="subheading">About us</span>
             <h2 class="mb-4 text-warning">Welcome to Sri Vijayalaxmi Travels</h2>
 
-            <p>Sri Vijayalaxmi Travels in Tirupati is one of the leading businesses in the Car Rental. Also known for Travel Agents, Car Rental, Taxi Services, Tempo Travellers On Rent, Car Rental For Outstation, Car Rental-Toyota Innova, Mini Bus On Rent, Taxi Services For Outstation and much more.</p> <p>Find Address, Contact Number, Reviews & Ratings, Photos, Maps of Sri Vijayalaxmi Travels, Tirupati. Established in the year 2007, Sri Vijayalaxmi Travels in New Balaji Colony, Tirupati is a top player in the category Car Rental in the Tirupati. This well-known establishment acts as a one-stop destination servicing customers both local and from other parts of Tirupati. Over the course of its journey, this business has established a firm foothold in it’s industry.</p>
-            <p>This business employs individuals that are dedicated towards their respective roles and put in a lot of effort to achieve the common vision and larger goals of the company. In the near future, this business aims to expand its line of products and services and cater to a larger client base.</p> <p>In Tirupati, this establishment occupies a prominent location in New Balaji Colony. It is an effortless task in commuting to this establishment as there are various modes of transport readily available. It is at Padhmavathi Nagar, Opposite PadmavathiMahila University, Padmavathi Nagar, which makes it easy for first-time visitors in locating this establishment.</p>
+            <p>Sri Vijayalaxmi Travels in Tirupati is one of the leading businesses in the Car Rental. Also known for
+              Travel Agents, Car Rental, Taxi Services, Tempo Travellers On Rent, Car Rental For Outstation, Car
+              Rental-Toyota Innova, Mini Bus On Rent, Taxi Services For Outstation and much more.</p>
+            <p>Find Address, Contact Number, Reviews & Ratings, Photos, Maps of Sri Vijayalaxmi Travels, Tirupati.
+              Established in the year 2007, Sri Vijayalaxmi Travels in New Balaji Colony, Tirupati is a top player in
+              the category Car Rental in the Tirupati. This well-known establishment acts as a one-stop destination
+              servicing customers both local and from other parts of Tirupati. Over the course of its journey, this
+              business has established a firm foothold in it’s industry.</p>
+            <p>This business employs individuals that are dedicated towards their respective roles and put in a lot of
+              effort to achieve the common vision and larger goals of the company. In the near future, this business
+              aims to expand its line of products and services and cater to a larger client base.</p>
+            <p>In Tirupati, this establishment occupies a prominent location in New Balaji Colony. It is an effortless
+              task in commuting to this establishment as there are various modes of transport readily available. It is
+              at Padhmavathi Nagar, Opposite PadmavathiMahila University, Padmavathi Nagar, which makes it easy for
+              first-time visitors in locating this establishment.</p>
             <!-- <p><a href="#" class="btn btn-primary py-3 px-4">Search Vehicle</a></p> -->
           </div>
         </div>
@@ -435,7 +456,8 @@
     </div>
   </section>
 
-  <section class="ftco-section ftco-intro" style="background-image: url(./travels/self-drive-car-rental-services-in-tirupati-1589369427-5428285.jpg);">
+  <section class="ftco-section ftco-intro"
+    style="background-image: url(./travels/self-drive-car-rental-services-in-tirupati-1589369427-5428285.jpg);">
     <div class="overlay"></div>
     <div class="container">
       <div class="row justify-content-end">
@@ -583,52 +605,64 @@
     </div>
   </section>
 
-  <section class="ftco-counter ftco-section img bg-light" id="section-counter">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
-          <div class="block-18">
-            <div class="text text-border d-flex align-items-center">
-              <strong class="number" data-number="60">0</strong>
-              <span>Year <br>Experienced</span>
-            </div>
+  <!-- Modal -->
+  <div class="modal puff-in-center bd-example-modal-lg" id="exampleModal" tabindex="-1"
+    aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content">
+        <div class="popup-container ">
+          <div class="text text-center">
+            <p>Book-Now</p>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
-          <div class="block-18">
-            <div class="text text-border d-flex align-items-center">
-              <strong class="number" data-number="1090">0</strong>
-              <span>Total <br>Cars</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
-          <div class="block-18">
-            <div class="text text-border d-flex align-items-center">
-              <strong class="number" data-number="2590">0</strong>
-              <span>Happy <br>Customers</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
-          <div class="block-18">
-            <div class="text d-flex align-items-center">
-              <strong class="number" data-number="67">0</strong>
-              <span>Total <br>Branches</span>
+          <button type="button" class="close-btn" data-bs-dismiss="modal">
+            <span><i class="fa-solid fa-circle-xmark fa-lg" style="color: #2474ff;"></i></span>
+          </button>
+
+          <div class="book-fields ">
+            <form action="">
+              <div>
+                <label for="">Name</label>
+                <input type="text" name="" id="" class="w-100">
+              </div>
+              <div>
+                <label for="">number</label>
+                <input type="number" name="" id="" class="w-100">
+              </div>
+              <div>
+                <label for="">Choose Service</label>
+                <select name="" id="services" class="w-100">
+                  <option value="Tirumalapackage">Tirumalapackage</option>
+                  <option value="Taxi for outstation">Taxi for outstation</option>
+                  <option value="Bus and Mini Bus on Rent">Bus and Mini Bus on Rent</option>
+                  <option value="Air Tickets Agent">Air Tickets Agent</option>
+                  <option value="12 Seater Tempo Traveller on Rent">12 Seater Tempo Traveller on Rent</option>
+                </select>
+              </div>
+              <div>
+                <label for="">Message</label>
+                <textarea name="" id="" cols="5" rows="5" class="w-100"></textarea>
+              </div>
+            </form>
+            <div class="book-btn text-center my-3">
+              <a href="#" class="btn btn-primary py-2 mr-1">Book now</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+
+
+
+
+
 
   <footer class="ftco-footer ftco-bg-dark ftco-section">
     <div class="container">
       <div class="row mb-5">
         <div class="col-md">
           <div class="ftco-footer-widget mb-4">
-           <img src="./travels/Logo (1).jpeg" alt="" width="100px">
+            <img src="./travels/Logo (1).jpeg" alt="" width="100px">
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
               blind texts.</p>
             <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
@@ -658,7 +692,7 @@
               <li><a href="#" class="py-2 d-block">Payment Option</a></li>
               <li><a href="#" class="py-2 d-block">Booking Tips</a></li>
               <li><a href="#" class="py-2 d-block">How it works</a></li>
-              <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+              <li><a href="#" class="py-2 d-block">Book Service</a></li>
             </ul>
           </div>
         </div>
@@ -667,10 +701,12 @@
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">D.no.15/57/4C, Konda complex shop no.10 Opp.Padmavathi Mahilauniveristy Tirupati, 517502</span></li>
-                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 8686605863/ 7660953398/ 9985660366 /9533669242</span></a></li>
-                <li><a href="#"><span class="icon icon-envelope " style="margin-right: 3px;"></span><span
-                      class="text"> srivijayalaxmitravels.nani@gmail.com</span></a></li>
+                <li><span class="icon icon-map-marker"></span><span class="text">D.no.15/57/4C, Konda complex shop no.10
+                    Opp.Padmavathi Mahilauniveristy Tirupati, 517502</span></li>
+                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 8686605863/ 7660953398/
+                      9985660366 /9533669242</span></a></li>
+                <li><a href="#"><span class="icon icon-envelope " style="margin-right: 3px;"></span><span class="text">
+                      srivijayalaxmitravels.nani@gmail.com</span></a></li>
               </ul>
             </div>
           </div>
@@ -679,17 +715,29 @@
       <div class="row">
         <div class="col-md-12 text-center">
 
-          <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          <p>
             Copyright &copy;
-            <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
-            <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com"
-              target="_blank">Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            <script>document.write(new Date().getFullYear());</script> All rights reserved | <a class="navbar-brand"
+              href="index.html">Sri<span color="red">Vijayalaxmi</span></a>
+
+
           </p>
         </div>
       </div>
     </div>
   </footer>
+
+
+  <!------------Whats APP Start------------->
+  <div class="whatsapp">
+    <a href="https://wa.me/8686605863"> <i class="fa-brands fa-whatsapp fa-beat fa-2xl"
+        style="color: rgb(0, 255, 34);"></i></a>
+  </div>
+
+  <div class="call">
+    <a href="tel:+917660953398"> <i class="fa-solid fa-phone fa-beat fa-2xl" style="color: #035efc;"></i></a>
+  </div>
+  <!-------Whats APP END-->
 
 
 
@@ -699,6 +747,11 @@
       <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
         stroke="#F96D00" />
     </svg></div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 
   <script src="js/jquery.min.js"></script>
